# DotNetLightning

./: .editorconfig  .fantomasignore  .git-blame-ignore-revs  .gitignore  .gitmodules  Directory.Build.props  DotNetLightning.FSharp.sln  DotNetLightning.sln  DotNetLightning.sln.DotSettings  LICENSE.txt  Nuget.Config  README.md  azure-pipelines.yml  fsc.props  fsharplint.json  index.html  index.json  nufsi.sh  restore.sh
.devcontainer/: Dockerfile  devcontainer.json
c-lightning/: overview.html
docs/: index.md  rpc_plugin_guide.fsx
examples/: cln_rpc_example.html
features/: dnl-namespace.html  other_namespaces.html
reference/: dotnetlightning-chain-blockchaininstanceid.html  dotnetlightning-chain-blockcontent.html  dotnetlightning-chain-chainerror.html  dotnetlightning-chain-confirmationtarget.html  dotnetlightning-chain-dynamicoutputp2wpkh.html  dotnetlightning-chain-dynamicoutputp2wsh.html  dotnetlightning-chain-ibroadcaster.html  dotnetlightning-chain-ifeeestimator.html  dotnetlightning-chain-onchainevent.html  dotnetlightning-chain-rawonchainevent.html  dotnetlightning-chain-spendableoutputdescriptor.html  dotnetlightning-chain-staticoutput.html  dotnetlightning-chain.html  dotnetlightning-channel-amounts.html  dotnetlightning-channel-channel.html  dotnetlightning-channel-channelconstants.html  dotnetlightning-channel-channelconsumeraction.html  dotnetlightning-channel-channelerror.html  dotnetlightning-channel-channelexception.html  (+617 more)
tools/fsharp_msggen/: README.md  pyproject.toml
tools/fsharp_msggen/fsharp_msggen/: __main__.py  fsharp.py  fsharp_tests.py
(+596 files in other folders)
